--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dev:backend": "nodemon backend/server.js",
     "dev:frontend": "vite",
     "postinstall": "[ ! \"$HUSKY_SKIP_INSTALL\" ] && node .husky/install.mjs || exit 0",
-    "test": "tap",
+    "test": "jest --watch=false",
     "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx}\"",
     "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
     "lint:markdown": "markdownlint docs/**/*.md",
@@ -76,6 +76,10 @@
     "@svgr/rollup": "^8.1.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
     "@types/postcss-import": "^14.0.3",
     "@types/react": "^18.3.6",
@@ -152,7 +156,10 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "chakra-ui": "^0.3.9",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
