chore: setting up vitest and other configs
Setup configs for testing  and linting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "private": true,
   "type": "module",
-  "main": "backend/server.ts",
+  "main": "backend/index.ts",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -19,10 +19,12 @@
   },
   "scripts": {
     "security-check": "npm audit",
-    "dev:backend": "nodemon backend/server.js",
+    "dev:backend": "nodemon backend/index.js",
     "dev:frontend": "vite",
     "postinstall": "[ ! \"$HUSKY_SKIP_INSTALL\" ] && node .husky/install.mjs || exit 0",
-    "test": "jest --watch=false",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx}\"",
     "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
     "lint:markdown": "markdownlint docs/**/*.md",
@@ -54,100 +56,6 @@
     "*.{json,css,scss,md,less}": [
       "prettier --write"
     ]
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.25.6",
-    "@babel/code-frame": "^7.24.7",
-    "@babel/core": "^7.25.2",
-    "@babel/eslint-parser": "^7.25.1",
-    "@babel/generator": "^7.25.6",
-    "@babel/plugin-transform-runtime": "^7.25.4",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@babel/runtime": "^7.25.6",
-    "@babel/template": "^7.25.0",
-    "@babel/traverse": "^7.25.6",
-    "@babel/types": "^7.25.6",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/js": "^9.10.0",
-    "@reduxjs/toolkit": "^2.2.7",
-    "@svgr/rollup": "^8.1.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@types/body-parser": "^1.19.5",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.5.5",
-    "@types/postcss-import": "^14.0.3",
-    "@types/react": "^18.3.6",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/tough-cookie": "^4.0.5",
-    "@types/yargs": "^17.0.33",
-    "@types/yargs-parser": "^21.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "autoprefixer": "^10.4.20",
-    "babel-plugin-transform-import-meta": "^2.2.1",
-    "chalk": "^5.3.0",
-    "commitlint": "^19.5.0",
-    "cross-env": "^7.0.3",
-    "cypress": "^13.14.2",
-    "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jsdoc": "^50.2.3",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-unicorn": "^55.0.0",
-    "fetch-mock": "^11.1.3",
-    "globals": "^15.9.0",
-    "husky": "^9.1.6",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.10",
-    "lodash": "^4.17.21",
-    "markdownlint-cli": "^0.41.0",
-    "mkdirp": "^3.0.1",
-    "mongoose-migrate": "^0.2.4",
-    "nodemon": "^3.1.4",
-    "postcss": "^8.4.47",
-    "postcss-apply": "^0.12.0",
-    "postcss-custom-media": "^11.0.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^16.1.0",
-    "postcss-lit": "^1.1.1",
-    "postcss-nested": "^6.2.0",
-    "postcss-preset-env": "^10.0.3",
-    "prettier": "^3.3.3",
-    "prettier-eslint": "^16.3.0",
-    "prettier-stylelint": "^0.4.2",
-    "react-icons": "^5.3.0",
-    "react-redux": "^9.1.2",
-    "react-responsive": "^10.0.0",
-    "redux": "^5.0.1",
-    "sass": "^1.78.0",
-    "serve": "^14.2.3",
-    "sonarqube-scanner": "^4.2.2",
-    "stylelint": "^16.9.0",
-    "stylelint-config-recommended": "^14.0.1",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-formatter-pretty": "^4.0.1",
-    "stylelint-order": "^6.0.4",
-    "stylelint-prettier": "^5.0.2",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.6.0",
-    "vite": "^5.4.6",
-    "vite-plugin-bundle-analyzer": "^0.0.1",
-    "vite-plugin-environment": "^1.1.3"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -195,5 +103,104 @@
     "uuid": "^10.0.0",
     "winston": "^3.14.2",
     "yup": "^1.4.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/code-frame": "^7.24.7",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/generator": "^7.25.6",
+    "@babel/plugin-transform-runtime": "^7.25.4",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@babel/runtime": "^7.25.6",
+    "@babel/template": "^7.25.0",
+    "@babel/traverse": "^7.25.6",
+    "@babel/types": "^7.25.6",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/js": "^9.10.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@svgr/rollup": "^8.1.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.5",
+    "@types/postcss-import": "^14.0.3",
+    "@types/react": "^18.3.6",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/supertest": "^6.0.2",
+    "@types/tough-cookie": "^4.0.5",
+    "@types/yargs": "^17.0.33",
+    "@types/yargs-parser": "^21.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.20",
+    "babel-plugin-transform-import-meta": "^2.2.1",
+    "chalk": "^5.3.0",
+    "commitlint": "^19.5.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.10.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsdoc": "^50.2.3",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "fetch-mock": "^11.1.3",
+    "globals": "^15.9.0",
+    "husky": "^9.1.6",
+    "jsdom": "^25.0.0",
+    "lint-staged": "^15.2.10",
+    "lodash": "^4.17.21",
+    "markdownlint-cli": "^0.41.0",
+    "mkdirp": "^3.0.1",
+    "mongoose-migrate": "^0.2.4",
+    "msw": "^2.4.9",
+    "nodemon": "^3.1.4",
+    "postcss": "^8.4.47",
+    "postcss-apply": "^0.12.0",
+    "postcss-custom-media": "^11.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-lit": "^1.1.1",
+    "postcss-nested": "^6.2.0",
+    "postcss-preset-env": "^10.0.3",
+    "prettier": "^3.3.3",
+    "prettier-eslint": "^16.3.0",
+    "prettier-stylelint": "^0.4.2",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
+    "redux": "^5.0.1",
+    "sass": "^1.78.0",
+    "serve": "^14.2.3",
+    "sonarqube-scanner": "^4.2.2",
+    "stylelint": "^16.9.0",
+    "stylelint-config-recommended": "^14.0.1",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-formatter-pretty": "^4.0.1",
+    "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^5.0.2",
+    "supertest": "^7.0.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0",
+    "vite": "^5.4.6",
+    "vite-plugin-bundle-analyzer": "^0.0.1",
+    "vite-plugin-environment": "^1.1.3",
+    "vitest": "^2.1.1"
   }
 }
