--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "types": ["vite/client", "vitest/globals", "node"],
       "target": "ES2022",
       "lib": ["ES2023"],
       "module": "ESNext",
