feat: added typedoc and vitest
Setup and configured TypeDoc and Vitest. Moved original documentation files to a project directory so that TypeDoc does not overwrite existing data. Will use TSDoc and JSDoc comments with TypeDoc to produce rough documentation. Plan to refactor these documents so that it will be clear documentation in a framework like Docusaurs or MKDocs

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,6 +22,6 @@
       "noUnusedParameters": true,
       "noFallthroughCasesInSwitch": true
     },
-    "include": ["frontend/src"]
+    "include": ["frontend/src/**/*.{ts,tsx,js,jsx}", "backend/**/*.{ts,tsx,js,jsx}"]
   }
   
