--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "docs": "npx typedoc --options typedoc.json",
     "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx}\"",
     "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
-    "lint:markdown": "markdownlint docs/**/*.md",
-    "fix:markdown": "prettier --write docs/**/*.md",
-    "eslint": "eslint --report-unused-disable-directives --ext .js,.jsx,.ts,.tsx --max-warnings=0 ./backend ./frontend",
-    "eslint:fix": "eslint --report-unused-disable-directives --ext .js,.jsx,.ts,.tsx --max-warnings=0 ./backend ./frontend --fix",
+    "lint:markdown": "markdownlint docs/**/*.md project/**/*.md",
+    "fix:markdown": "prettier --write docs/**/*.md project/**/*.md",
+    "eslint": "eslint --report-unused-disable-directives --max-warnings=0 ./backend ./frontend",
+    "eslint:fix": "eslint --report-unused-disable-directives --max-warnings=0 ./backend ./frontend --fix",
     "build:frontend": "tsc -b && vite build",
     "preview": "vite preview",
     "start:frontend": "serve -s dist",
     "clean": "rm -rf dist",
-    "analyze": "vite build --mode analyze"
+    "analyze": "vite build --mode analyze",
+    "prepare": "husky"
   },
   "husky": {
     "hooks": {
@@ -75,6 +77,7 @@
     "framer-motion": "^11.5.4",
     "helmet": "^7.1.0",
     "i18next": "^23.15.1",
+    "jsdoc": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "markdown-to-jsx": "^7.5.0",
@@ -121,6 +124,8 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.10.0",
+    "@microsoft/tsdoc": "^0.15.0",
+    "@microsoft/tsdoc-config": "^0.17.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@svgr/rollup": "^8.1.0",
     "@testing-library/jest-dom": "^6.5.0",
@@ -152,13 +157,14 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jsdoc": "^50.2.3",
+    "eslint-plugin-jsdoc": "^50.2.4",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-tsdoc": "^0.3.0",
     "eslint-plugin-unicorn": "^55.0.0",
     "fetch-mock": "^11.1.3",
     "globals": "^15.9.0",
@@ -196,6 +202,8 @@
     "stylelint-order": "^6.0.4",
     "stylelint-prettier": "^5.0.2",
     "supertest": "^7.0.0",
+    "typedoc": "^0.26.7",
+    "typedoc-plugin-markdown": "^4.2.7",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
     "vite": "^5.4.6",
