--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,6 +20,6 @@
       "noUnusedParameters": true,
       "noFallthroughCasesInSwitch": true
     },
-    "include": ["vite.config.ts"]
+    "include": ["vite.config.ts", "frontend/src/**/*.{ts,tsx,js,jsx}", "backend/**/*.{ts,tsx,js,jsx}"]
   }
   
