--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "chakra-ui": "^0.3.9",
     "cookie-parser": "^1.4.6",
@@ -76,6 +77,7 @@
     "framer-motion": "^11.5.4",
     "helmet": "^7.1.0",
     "i18next": "^23.15.1",
+    "joi": "^17.13.3",
     "jsdoc": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
@@ -97,6 +99,8 @@
     "react-router-dom": "^6.26.2",
     "react-table": "^7.8.0",
     "redux-saga": "^1.3.0",
+    "sanitize": "^2.1.2",
+    "sanitize-html": "^2.13.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.13",
     "swagger-jsdoc": "^6.2.8",
