--- a/package.json
+++ b/package.json
@@ -68,10 +68,12 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "chakra-ui": "^0.3.9",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.5.4",
@@ -85,6 +87,7 @@
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "mongoose": "^8.6.2",
+    "morgan": "^1.10.0",
     "newrelic": "^12.5.0",
     "prop-types": "^15.8.1",
     "radix": "^0.0.0",
@@ -135,9 +138,12 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/body-parser": "^1.19.5",
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.5",
     "@types/postcss-import": "^14.0.3",
     "@types/react": "^18.3.6",
@@ -156,6 +162,7 @@
     "chalk": "^5.3.0",
     "commitlint": "^19.5.0",
     "cross-env": "^7.0.3",
+    "cssnano": "^7.0.6",
     "eslint": "^9.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.1.0",
@@ -187,7 +194,7 @@
     "postcss-import": "^16.1.0",
     "postcss-lit": "^1.1.1",
     "postcss-nested": "^6.2.0",
-    "postcss-preset-env": "^10.0.3",
+    "postcss-preset-env": "^10.0.5",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
     "prettier-stylelint": "^0.4.2",
